@@ -47,6 +47,7 @@ o remove unix socket file on exit
 o use umask() to set up file permissions
 o add support for NAT sequence adjustment (requires Linux kernel >= 2.6.25)
 o remove TODO file from release tarballs
+o compose the file descriptor set at initialization stage to save some cycles
 
 Max Kellermann <max@duempel.org>:
 
